@@ -37,7 +37,7 @@
   BOOL _gormAllowsColumnSelection;
   BOOL _gormAllowsMultipleSelection;
   BOOL _gormAllowsEmptySelection;
-  NSColor *_savedColor;
+  // NSColor *_savedColor;
 }
 
 - (void) setGormDelegate: (id)anObject;
@@ -53,8 +53,10 @@
 - (BOOL) gormAllowsColumnSelection;
 
 // preserve the color during selection...
+/*
 - (void) select;
 - (void) unselect;
+*/
 @end
 
 #endif
